# aoc2018

./: .gitignore  README.md  aoc2018.cabal  default.nix  hie.yaml  hoogle.sh  package.yaml  release.nix  shell-hnix.nix  shell-hnix2.nix  shell-hoogle.nix  shell-nixpkgs.nix  shell.nix
common/: Advent.hs
execs/: Day1.hs  Day2.hs  Day6.hs  Day7.hs  aoc.hs
haskell.nix/: pkgs.nix
haskell.nix/.plan.nix/: aoc2018.nix
move/: Day8.hs.bak  Day9.hs
src/: Day1.hs  Day13.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Lib.hs  Main.hs
src/AOC/: Day1.hs  Day2.hs  Day3.hs  Lib.hs
stubs/: Day4.hs  Day5.hs
