cabal-version: 1.12

name:           aoc2018
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      Day1
      Day2
      Day3
      Day4
      Day5
      Day6
      Day7
      Day13
      Lib
  other-modules:
      Paths_aoc2018
  hs-source-dirs:
      src/
  default-extensions: OverloadedStrings
  ghc-options: -W -O2
  build-depends:
      array
    , base
    , bytestring
    , case-insensitive
    , aeson
    , containers
    , data-default
    , directory
    , extra
    , filepath
    , lens
    , megaparsec
    , mtl
    , optparse-applicative
    , parser-combinators
    , process
    , random
    , split
    , text
    , time
    , vector
    , yaml
    , raw-strings-qq
  default-language: Haskell2010

executable primes
  main-is: primes.hs
  other-modules:
      Paths_aoc2018
  hs-source-dirs:
      execs
  default-extensions: OverloadedStrings
  ghc-options: -W -O2
  build-depends:
    base
  if os(darwin)
    extra-libraries:
        iconv
  default-language: Haskell2010


executable aoc
  main-is: aoc.hs
  other-modules:
      Paths_aoc2018
  hs-source-dirs:
      execs
  default-extensions: OverloadedStrings
  ghc-options: -W -O2
  build-depends:
      aoc2018
    , base
    , filepath
    , optparse-applicative
    , text
  if os(darwin)
    extra-libraries:
        iconv
  default-language: Haskell2010
